--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,6 +31,7 @@
             android:hint="email"
             android:lines="1"
             android:maxLines="1"
+            android:singleLine="true"
             android:padding="10dp"
             android:elevation="4dp"
             android:background="@drawable/border_edit_text"
