--- a/app/src/main/res/layout/item_user_list.xml
+++ b/app/src/main/res/layout/item_user_list.xml
@@ -1,9 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.adapter.UserListAdapter">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <data>
+        <variable
+            name="data"
+            type="com.juniverse.wheelchat.model.User" />
+    </data>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="2dp"
+        android:background="@drawable/rect_border"
+        android:elevation="2dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/profileImgCv"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            imageUrl="@{data.profile_img}"
+            android:layout_marginVertical="5dp"
+            android:layout_marginHorizontal="5dp"
+            />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/displayNameTv"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_marginVertical="5dp"
+            android:layout_marginHorizontal="5dp"
+            android:textSize="16sp"
+            android:text="@{data.name}"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
+            />
+
+
+    </LinearLayout>
+
+</layout>
