--- a/app/src/main/res/anim/rotate.xml
+++ b/app/src/main/res/anim/rotate.xml
@@ -4,5 +4,6 @@
         android:pivotX="50%"
         android:pivotY="50%"
         android:fromDegrees="0"
+        android:duration="3000"
         />
 </set>
