--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,21 @@
         android:layout_height="match_parent"
         tools:context=".ui.activity.home.MainActivity">
 
+        <include
+            android:id="@+id/tool_bar"
+            layout="@layout/toolbar"
+            android:translationZ="@dimen/cardview_default_elevation"/>
+
         <FrameLayout
             android:id="@+id/flFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginBottom="4dp"
             android:background="@drawable/rect_border"
-            android:layout_marginBottom="80dp"
             android:elevation="2dp"
+            android:paddingTop="8dp"
             app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/tool_bar" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
@@ -31,9 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_nav_menu"/>
-
-
+            app:menu="@menu/bottom_nav_menu" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
