--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -14,39 +14,9 @@
         android:orientation="vertical"
         tools:context=".ui.fragment.ChatFragment">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:elevation="4dp"
-            android:background="@drawable/border_edit_text">
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/etSearch"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/transparent"
-                android:hint="Search here..."
-                android:paddingHorizontal="12dp"
-                android:paddingVertical="8dp"
-                android:textColor="@color/design_default_color_on_secondary"
-                android:textColorHint="@android:color/darker_gray"
-                android:textSize="16dp" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/ivClearSearch"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="end|center_vertical"
-                android:layout_marginEnd="12dp"
-                android:visibility="gone"
-                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
-                tools:visibility="visible" />
-
-        </FrameLayout>
-
+        <include
+            android:id="@+id/search_box"
+            layout="@layout/search_box" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
