--- a/app/src/main/res/drawable/ic_wheel_chat_ball.xml
+++ b/app/src/main/res/drawable/ic_wheel_chat_ball.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="40">
   <path
       android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
-      android:fillColor="#7C4DF7"
+      android:fillColor="@color/teal_200"
       android:fillAlpha="0.6"/>
 </vector>
