--- a/app/src/main/res/drawable/ic_wheel_chat_circle.xml
+++ b/app/src/main/res/drawable/ic_wheel_chat_circle.xml
@@ -6,5 +6,5 @@
   <path
       android:pathData="M60,60m-58,0a58,58 0,1 1,116 0a58,58 0,1 1,-116 0"
       android:strokeWidth="4"
-      android:strokeColor="#7C4DF7"/>
+      android:strokeColor="@color/teal_200"/>
 </vector>
