--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,6 +66,18 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/toLoginTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_gravity="end"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="@color/purple_200"
+            android:text="Already have an account ?"/>
+
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
