--- a/app/src/main/res/layout/activity_wheel_chat.xml
+++ b/app/src/main/res/layout/activity_wheel_chat.xml
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="10dp"
-            android:text="Bottom"
+            android:text="Left"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bottomEditText" />
 
